--- a/inner.html
+++ b/inner.html
@@ -130,7 +130,7 @@
 					<p>Повседневная практика показывает, что новая модель организационной деятельности требуют определения и уточнения соответствующий условий активизации. Задача организации, в особенности же сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
 				</div>
 				<p>Задача организации, в особенности же сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Повседневная практика показывает, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации форм развития. Товарищи! консультация с широким активом позволяет выполнять важные задания по разработке систем массового участия.</p>
-				<table class="table">
+				<table>
 					<thead>
 						<tr>
 							<th width="33.33%">Какой то текст под номером #1</th>
@@ -173,54 +173,54 @@
 				</table>
 				<div class="gallery" data-ratio="0.7083">
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 					<div class="gallery__item">
-						<div class="gallery--pic scale">
+						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
 							<img src="./pic/text-1.jpg" width="264" height="183" class="img-cover" alt="">
-						</div>
+						</a>
 					</div>
 				</div>
 			</div>
