table pictures adaptive

--- a/inner.html
+++ b/inner.html
@@ -171,6 +171,26 @@
 						</tr>
 					</tbody>
 				</table>
+				<table>
+					<thead>
+						<tr>
+							<th>Осетровые</th>
+							<th>Сиговые</th>
+							<th>Лососевые</th>
+							<th>Карп</th>
+							<th>Сом</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><img src="./img/fish/osetr.JPG" style="width: 200px;"></td>
+							<td><img src="./img/fish/osetr.JPG" style="width: 200px;"></td>
+							<td><img src="./img/fish/losos.JPG" style="width: 200px;"></td>
+							<td><img src="./img/fish/karp.JPG" style="width: 200px;"></td>
+							<td><img src="./img/fish/osetr.JPG" style="width: 200px;"></td>
+						</tr>
+					</tbody>
+				</table>
 				<div class="gallery" data-ratio="0.7083">
 					<div class="gallery__item">
 						<a href="./pic/text-1.jpg" class="gallery--pic scale zoom" rel="group">
